--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "axios": "^0.24.0",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "set-cookie-parser": "^2.4.8"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
