--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "axios": "^0.24.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "nodemailer": "^6.7.1",
     "set-cookie-parser": "^2.4.8"
   },
   "devDependencies": {
+    "dotenv": "^10.0.0",
     "nodemon": "^2.0.15"
   }
 }
